getAllDocs接口
